# WildHunt

./: .gitignore  LICENSE  README.md  TODO.txt  environment.yml  requirements.txt  setup.cfg  setup.py
examples/: Introduction to WildHunt.ipynb  LRIS_VI_candidates_220304.csv  UKIDSS_sources.csv  catalog_example.py  catalog_merge_example.py  cutout_figures.py  dask_test.py  develop_crossmatch.py  develop_persistent_check.py  download_example.py  euclid_download.py  euclid_standalone.py  example_aperture_photometry.py  example_catalog.py  example_euclid.py  example_finding_chart.py  example_highz_obsprep.py  example_image_download.py  example_online_cross_match.py  example_persistence_check.py  example_retrieve_offset_stars.py  finding_chart_example.py  forced_photometry_example.py  getoffset_example.py  image_example.py  imagingsurvey_example.py  instrument_observing_setup_example.py  observation_preparation_example.py  observation_starlist_catalog.csv  plot_example.py  queryregion_example.py  ukidss_sources.txt
examples/data/: 20240925_persistence_testing.csv  Euclid_sources.csv  UKIDSS_sources.hdf5  UKIDSS_sources_subset.csv  new_elqs_quasars.csv  pselqs_quasars.csv  pselqs_quasars_subset.csv  reclassified_all_observations_upto1901_clean.csv  zgtr4_ulq.csv
examples/deprecated/: getoffset_example.py
examples/review/: develop_lofar_astron.py  finding_chart_example.py  getoffset_example.py  image_example.py  instrument_observing_setup_example.py  ob_example.obx  observation_preparation_example.py
wildhunt/: catalog.py  catalog_defaults.py  catalog_new.py  catalog_queries.py  euclid_utils.py  findingchart.py  image.py  image_refactor.py  inspector.py  instruments.py  logger.py  photometry.py  plotting.py  pypmsgs.py  user.py  utils.py
wildhunt/deprecated/: euclid_standalone.py  image.py  image_old.py  plotting_old.py
wildhunt/surveys/: catalog_defaults.py  euclid.py  imagingsurvey.py  legacysurvey.py  lotss.py  panstarrs.py  unwise.py  vsa_wsa.py  wise.py
wildhunt/utilities/: download_utils.py  euclid_utils.py  general_utils.py  (+3 more)
