[metadata]
name = wildhunt
version = 0.1b0
author = Jan-Torge Schindler, Riccardo Nanni
author_email = schindler@strw.leidenuniv.nl, nanni@strw.leidenuniv.nl
description = A collection of python routines to aid in the hunt for quasars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enigma-igm/WildHunt
project_urls =
    Bug Tracker = https://github.com/enigma-igm/WildHunt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

;[options.packages.find]
;where = wildhunt