[metadata]
name = wildhunt
version = 0.1b0
author = Jan-Torge Schindler, Riccardo Nanni
author_email = schindler@strw.leidenuniv.nl, nanni@strw.leidenuniv.nl
description = A collection of python routines to aid in the hunt for quasars
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/enigma-igm/WildHunt
project_urls =
    Bug Tracker = https://github.com/enigma-igm/WildHunt/issues
license = BSD-3-Clause
keywords =
    quasar
    astronomy
    science
    python
    wildhunt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics


[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    astropy
    matplotlib
    pandas
    ipython
    jupyter
    requests
    dask
    astroquery
    reproject
    photutils
    tqdm
    fastparquet
;    h5py
    pyyaml
;    tables
    nbsphinx
    nbsphinx-link

requirement_files =
    requirements.txt

[options.packages.find]
exclude =
    examples*
    notebooks*